syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.generated";
option java_outer_classname = "MessageApi";

service MessageApiRpc {
    rpc sendMessage (MessageRpc) returns (MessageResponseRpc);
    rpc messageStream (stream MessageRpc) returns (stream MessageRpc);
}

message MessageRpc {
    string user = 1;
    string message = 2;
}

message MessageResponseRpc {
    string uuid = 1;
}

message ExceptionDetails {
    int32 status = 1;
    string code = 2;
    repeated string params = 3;
}